[gd_scene load_steps=114 format=3 uid="uid://t37wtu303voa"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_6sujd"]
[ext_resource type="Texture2D" uid="uid://buy1km0uhv2s" path="res://assets/StartMenu/start_menu_title.png" id="2_erob5"]
[ext_resource type="AudioStream" uid="uid://dq6qyuehav1gp" path="res://sounds/Effects/StartMenu/Hippo_idle - Menu and Intro.wav" id="2_m1l5x"]
[ext_resource type="PackedScene" uid="uid://co08gfyao26ix" path="res://scenes/start_menu_animation.tscn" id="3_2u1s3"]
[ext_resource type="AudioStream" uid="uid://cwxc60ouxp8o4" path="res://sounds/Effects/StartMenu/Hippo_Start_Game - Menu and Intro.wav" id="3_pqf7a"]
[ext_resource type="Texture2D" uid="uid://bop2uge4fmo6s" path="res://assets/StartMenu/Button/newgame-hover.png" id="6_1rmoy"]
[ext_resource type="Texture2D" uid="uid://clbnufe430hot" path="res://assets/StartMenu/Button/newgame-normal.png" id="7_lcpis"]
[ext_resource type="Texture2D" uid="uid://d33y4uv6rel2c" path="res://assets/StartMenu/Button/continue-disabled.png" id="8_7xwdk"]
[ext_resource type="Texture2D" uid="uid://bvgb10m5e1oah" path="res://assets/StartMenu/Button/hellmode-toggle.png" id="9_24vyc"]
[ext_resource type="Texture2D" uid="uid://bmch0yvpqkrsd" path="res://assets/StartMenu/Button/continue-hover.png" id="9_j7gbf"]
[ext_resource type="Texture2D" uid="uid://bqyhhmcnhyhqu" path="res://assets/StartMenu/Button/hellmode-normal.png" id="10_ae8gf"]
[ext_resource type="Texture2D" uid="uid://bipo0t4hsyfm8" path="res://assets/StartMenu/Button/continue-normal.png" id="10_yp0aa"]
[ext_resource type="Texture2D" uid="uid://g4xaeqoess4s" path="res://assets/StartMenu/Button/extra-hover.png" id="11_bfuv7"]
[ext_resource type="FontFile" uid="uid://bafa8t46i5ktu" path="res://assets/font/ChelseaMarket-Regular.ttf" id="11_v6wbj"]
[ext_resource type="Texture2D" uid="uid://c6tdl33t3i5r" path="res://assets/StartMenu/Button/extra-normal.png" id="12_pgmgv"]
[ext_resource type="Texture2D" uid="uid://cxvfqqt3ckmpx" path="res://assets/StartMenu/Button/options-hover.png" id="13_422jr"]
[ext_resource type="Texture2D" uid="uid://d1su4x70jbwmh" path="res://assets/StartMenu/Button/options-normal.png" id="14_1g3b4"]
[ext_resource type="Texture2D" uid="uid://degkemvdplh3o" path="res://assets/Binder/btn/binder_arrow_left-hover.png" id="15_8tpc0"]
[ext_resource type="Texture2D" uid="uid://dldnr0uwiijo3" path="res://assets/Binder/btn/binder_arrow_left-press.png" id="16_3b7ej"]
[ext_resource type="Texture2D" uid="uid://r4eep2ufhwj7" path="res://assets/Binder/btn/binder_arrow_left.png" id="17_i32lp"]
[ext_resource type="Texture2D" uid="uid://cqdu45o27c4a5" path="res://assets/StartMenu/Button/goback-hover.png" id="23_ig140"]
[ext_resource type="Texture2D" uid="uid://321kgg0go3vq" path="res://assets/StartMenu/Button/goback-normal.png" id="24_d5xvv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_71ta3"]
radius = 160.012

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y54dl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_58id6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ede1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhike"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2qyhd"]
texture = ExtResource("6_1rmoy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_em70h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tmyyb"]
texture = ExtResource("6_1rmoy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_63db8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8cbvb"]
texture = ExtResource("6_1rmoy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlo7h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gohse"]
texture = ExtResource("7_lcpis")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y4mrt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ia46"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6qjvj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vdy2r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k5m04"]
texture = ExtResource("9_24vyc")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tk31j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mj7jx"]
texture = ExtResource("10_ae8gf")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vnft8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7q4bo"]
texture = ExtResource("9_24vyc")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kwue4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o7mdd"]
texture = ExtResource("10_ae8gf")

[sub_resource type="LabelSettings" id="LabelSettings_w5uby"]
font = ExtResource("11_v6wbj")
font_size = 13
font_color = Color(0.666569, 0.666569, 0.666569, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_stt3e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5db5c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fwwnl"]
texture = ExtResource("8_7xwdk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hfeox"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pyfxa"]
texture = ExtResource("9_j7gbf")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n6ti1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j6cv1"]
texture = ExtResource("9_j7gbf")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dgdga"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rggtx"]
texture = ExtResource("9_j7gbf")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5sssd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e5bc5"]
texture = ExtResource("10_yp0aa")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5rpaq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5um4c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bo7xe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7e7wj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_66fnl"]
texture = ExtResource("11_bfuv7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cooak"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ogyt8"]
texture = ExtResource("11_bfuv7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fartb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ovwb"]
texture = ExtResource("11_bfuv7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_650np"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1qbdf"]
texture = ExtResource("12_pgmgv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swp87"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qwhbf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kqd84"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cwb5r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0md7l"]
texture = ExtResource("13_422jr")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ly2e5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5fslg"]
texture = ExtResource("13_422jr")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2dqv7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kjquf"]
texture = ExtResource("13_422jr")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_srvak"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0s352"]
texture = ExtResource("14_1g3b4")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_478f3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nuqgy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gcce8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aw2qy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eaqvt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kc3mq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bw1jv"]
texture = ExtResource("15_8tpc0")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jbi0k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gd285"]
texture = ExtResource("16_3b7ej")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h6s1f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xwuoq"]
texture = ExtResource("17_i32lp")

[sub_resource type="LabelSettings" id="LabelSettings_pesp7"]
font = ExtResource("11_v6wbj")
font_size = 43
font_color = Color(0, 0, 0, 1)
outline_size = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5e5q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rwssx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ewytk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbryr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_owmp7"]
texture = ExtResource("6_1rmoy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06leo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r22b4"]
texture = ExtResource("6_1rmoy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ckfwg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y41vi"]
texture = ExtResource("6_1rmoy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jtiy1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ecrf1"]
texture = ExtResource("7_lcpis")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_st7wx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_abocl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_55sg3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p3jq4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e1rlh"]
texture = ExtResource("23_ig140")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qabsm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0fytk"]
texture = ExtResource("23_ig140")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hyatm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xicnr"]
texture = ExtResource("23_ig140")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qwp7e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j6ixd"]
texture = ExtResource("24_d5xvv")

[node name="StartMenu" type="Node2D" node_paths=PackedStringArray("container_normal", "newgame_btn", "continue_btn", "extras_btn", "option_btn", "back_btn", "hell_mode", "hell_mode_lbl", "moodeng_extra_area", "container_confirmation", "confirm_newgame_btn", "comfirm_goback_btn")]
script = ExtResource("1_6sujd")
container_normal = NodePath("CanvasLayer/MarginContainer")
newgame_btn = NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/NewgameBtn")
continue_btn = NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/ContinueBtn")
extras_btn = NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer3/ExtrasBtn")
option_btn = NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer3/OptionsBtn")
back_btn = NodePath("CanvasLayer/BackBtn")
hell_mode = NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/HellModeBtn")
hell_mode_lbl = NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/Label")
moodeng_extra_area = NodePath("SpriteExtras05Area")
container_confirmation = NodePath("CanvasLayer/NewgameComfirmation")
confirm_newgame_btn = NodePath("CanvasLayer/NewgameComfirmation/VBoxContainer/HBoxContainer2/NewgameBtn")
comfirm_goback_btn = NodePath("CanvasLayer/NewgameComfirmation/VBoxContainer/HBoxContainer2/GobackBtn")

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("2_erob5")
centered = false

[node name="StartMenuAnimation" parent="." instance=ExtResource("3_2u1s3")]

[node name="HippoIdle-MenuAndIntro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m1l5x")
volume_db = 15.0
bus = &"SFX"

[node name="HippoStartGame-MenuAndIntro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pqf7a")
volume_db = 5.0
bus = &"SFX"

[node name="debug" type="Node2D" parent="."]

[node name="newgameToggle" type="Button" parent="debug"]
visible = false
offset_right = 8.0
offset_bottom = 8.0
text = "test"

[node name="SpriteExtras05Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteExtras05Area"]
position = Vector2(364, 274)
shape = SubResource("CircleShape2D_71ta3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(600, 300)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -150.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer1" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="NewgameBtn" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_y54dl")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_58id6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ede1")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mhike")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_2qyhd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_em70h")
theme_override_styles/hover = SubResource("StyleBoxTexture_tmyyb")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_63db8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8cbvb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_nlo7h")
theme_override_styles/normal = SubResource("StyleBoxTexture_gohse")

[node name="HellModeBtn" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_y4mrt")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_1ia46")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6qjvj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vdy2r")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k5m04")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_tk31j")
theme_override_styles/hover = SubResource("StyleBoxTexture_mj7jx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vnft8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7q4bo")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_kwue4")
theme_override_styles/normal = SubResource("StyleBoxTexture_o7mdd")
toggle_mode = true

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
text = "no guaruntee
card in pack"
label_settings = SubResource("LabelSettings_w5uby")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ContinueBtn" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_stt3e")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5db5c")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fwwnl")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hfeox")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_pyfxa")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_n6ti1")
theme_override_styles/hover = SubResource("StyleBoxTexture_j6cv1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dgdga")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rggtx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_5sssd")
theme_override_styles/normal = SubResource("StyleBoxTexture_e5bc5")

[node name="HellmodeContinue" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("9_24vyc")

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ExtrasBtn" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_5rpaq")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5um4c")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bo7xe")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_7e7wj")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_66fnl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_cooak")
theme_override_styles/hover = SubResource("StyleBoxTexture_ogyt8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fartb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4ovwb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_650np")
theme_override_styles/normal = SubResource("StyleBoxTexture_1qbdf")

[node name="OptionsBtn" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_swp87")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qwhbf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kqd84")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_cwb5r")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_0md7l")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ly2e5")
theme_override_styles/hover = SubResource("StyleBoxTexture_5fslg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_2dqv7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kjquf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_srvak")
theme_override_styles/normal = SubResource("StyleBoxTexture_0s352")

[node name="BackBtn" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(130, 130)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -130.0
offset_right = 130.0
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_478f3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_nuqgy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gcce8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_aw2qy")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_eaqvt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_kc3mq")
theme_override_styles/hover = SubResource("StyleBoxTexture_bw1jv")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_jbi0k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gd285")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_h6s1f")
theme_override_styles/normal = SubResource("StyleBoxTexture_xwuoq")
text = "BACK"

[node name="NewgameComfirmation" type="MarginContainer" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(600, 300)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -605.0
offset_top = -275.0
offset_bottom = 275.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/NewgameComfirmation"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer1" type="Control" parent="CanvasLayer/NewgameComfirmation/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="CanvasLayer/NewgameComfirmation/VBoxContainer/HBoxContainer1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Start a newgame 
will erase 
the previous progress"
label_settings = SubResource("LabelSettings_pesp7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/NewgameComfirmation/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="NewgameBtn" type="Button" parent="CanvasLayer/NewgameComfirmation/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_e5e5q")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_rwssx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ewytk")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_tbryr")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_owmp7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_06leo")
theme_override_styles/hover = SubResource("StyleBoxTexture_r22b4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ckfwg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y41vi")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jtiy1")
theme_override_styles/normal = SubResource("StyleBoxTexture_ecrf1")

[node name="GobackBtn" type="Button" parent="CanvasLayer/NewgameComfirmation/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_st7wx")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_abocl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_55sg3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_p3jq4")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_e1rlh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_qabsm")
theme_override_styles/hover = SubResource("StyleBoxTexture_0fytk")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_hyatm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xicnr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_qwp7e")
theme_override_styles/normal = SubResource("StyleBoxTexture_j6ixd")

[connection signal="pressed" from="debug/newgameToggle" to="." method="_on_newgame_pressed"]
[connection signal="mouse_entered" from="SpriteExtras05Area" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="SpriteExtras05Area" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/NewgameBtn" to="." method="_on_newgame_btn_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/NewgameBtn" to="." method="_on_newgame_btn_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/NewgameBtn" to="." method="_on_newgame_btn_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/HellModeBtn" to="." method="_on_hell_mode_btn_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/HellModeBtn" to="." method="_on_hell_mode_btn_mouse_exited"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer1/HellModeBtn" to="." method="_on_hell_mode_btn_toggled"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer3/ExtrasBtn" to="." method="_on_extras_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer3/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/NewgameComfirmation/VBoxContainer/HBoxContainer2/NewgameBtn" to="." method="_on_newgame_confirm_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/NewgameComfirmation/VBoxContainer/HBoxContainer2/GobackBtn" to="." method="_on_goback_btn_pressed"]
